--- a/Web/app/index.html
+++ b/Web/app/index.html
@@ -53,6 +53,8 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-base64/angular-base64.js"></script>
+    <script src="bower_components/angular-base64/angular-base64.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
