connect + watch added

--- a/site/app/index.html
+++ b/site/app/index.html
@@ -21,7 +21,10 @@
 
 
     <div ng-view="">
+       <!--
+       <img src="images/test1.png"/>
        <img src="images/test.png"/>
+       -->
     </div>
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
