--- a/static/app/index.html
+++ b/static/app/index.html
@@ -8,6 +8,7 @@
     <!-- build:css(app) css/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(app) css/site.css -->
