gulp almost done: _base.scss not maps in prod

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -5,13 +5,13 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- build:css(app) css/vendor.css -->
+    <!-- build:vendorcss css/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(app) css/site.css -->
-    <link rel="stylesheet" href="/css/app.css">
+    <!-- build:css css/site.css -->
+    <link rel="stylesheet" href="/css/main.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -21,7 +21,7 @@
 
     <div ng-view="login.html"></div>
     
-    <!-- build:js(app) scripts/vendor.js -->
+    <!-- build:vendorjs scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
@@ -31,7 +31,7 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js(app) scripts/site.js -->
+    <!-- build:js scripts/site.js -->
     <script src="/components/app.js"></script>
     <!-- endbuild -->
 </body>
