gulp almost done

--- a/static/styles.html
+++ b/static/styles.html
@@ -5,14 +5,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- build:css(app) css/vendor.css -->
-        <!-- bower:css -->
-        <link rel="stylesheet" href="../bower_components/components-font-awesome/css/font-awesome.css" />
-        <!-- endbower -->
-        <!-- endbuild -->
-        <!-- build:css(app) css/site.css -->
-        <link rel="stylesheet" href="/css/app.css">
-        <!-- endbuild -->
+
+        <link rel="stylesheet" href="assets/css/vendor.min.css" />
+        <link rel="stylesheet" href="assets/css/site.min.css">
+
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -309,17 +305,7 @@
         </footer>
 
 
-        <!-- build:js(app) scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="../bower_components/jquery/dist/jquery.js"></script>
-        <script src="../bower_components/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
-        <script src="../bower_components/angular/angular.js"></script>
-        <script src="../bower_components/angular-route/angular-route.js"></script>
-        <script src="../bower_components/angular-translate/angular-translate.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
-
-        <!-- build:js(app) scripts/site.js -->
-        <!-- endbuild -->
+        <script src="assets/js/vendor.min.js"></script>
+        <script src="assets/js/site.min.js"></script>
     </body>
 </html>
