--- a/static/styles.html
+++ b/static/styles.html
@@ -14,297 +14,20 @@
         <!--[if lt IE 10]>
           <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <nav class="navbar navbar-default navbar-static-top">
-            <div class="container">
-                <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">
-                        <span class="glyphicon glyphicon-home"></span>
-                        <!--<img width="100" height="20" alt="Brand" src="/images/brand.png"/>-->
-                    </a>
-                </div>
-
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
+        <div class="grid">
+                <nav class="grid-cell grid-cell--top grid--1of3">
+                    <ul>
                         <li><a href="#/about">About</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-globe"></span> Language</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">English</a></li>
-                                <li><a href="#">Русский</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="#/about">About</a></li>
+                        <li><a href="#/about">About</a></li>
+                        <li><a href="#/about">About</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li class="test"><a href="#"><span class="glyphicon glyphicon-th"></span> Designs</a></li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user"> User</span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Settings</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a href="#">Logout</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
-
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="" alt="">
-                        <div class="caption">
-                            <h3>Chinesse girl</h3>
-                            <p></p>
-                            <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <hr class="hr-unstyled"/>
-        <div class="container-fluid settings-container">
-
-
-
-            <div class="row">
-                <div class ="col-xs-12">
-                    <form class="form-horizontal">
-                        <legend>Password</legend>
-                        <div class="form-group">
-                            <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                            <div class="col-sm-10">
-                                <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-default btn-block">Change password</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <div class="row">
-                <div class ="col-xs-12">
-                    <form class="form-horizontal">
-                        <legend>Delete account</legend>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-danger">Delete account</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <hr class="hr-unstyled"/>
-
-        <div class="container-fluid notification-container">
-            <div class="row">
-                <div class ="col-xs-12 alert alert-success" role="alert">
-                    <p><span>We've sent you a message at: <strong>tarasov.e.a@gmail.com</strong></span></p>
-                    <p><span>Follow the link in that message to reset your password.</span></p>
-                </div>
-            </div>
-        </div>
-        <hr class="hr-unstyled"/>
-        <div class="container-fluid">
-            <div class="login-container">
-
-                <div class="row">
-                    <div class="col-xs-12"><h4>Log in to Stitch Galaxy with</h4></div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <a href="#" class="provider-link" id="login-facebook">
-                            <i class="fa fa-facebook provider-icon"></i>
-                            <span>Facebook</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <a href="#" class="provider-link" id="login-google">
-                            <i class="fa fa-google provider-icon"></i>
-                            <span>Google</span>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="row explanation">
-                    <div class="col-xs-12"><span>We'll <strong>never</strong> post without your permission.</span></div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <hr/>
-                        <!--                        <h5><strong>or</strong></h5>-->
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h4>Log in to your Stitch Galaxy account</h4>
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-xs-12">
-                        <p>
-                            <input type="email" class="form-control" placeholder="Email"/>
-                        </p>
-                        <div class="has-success">
-                            <span id="helpBlock2" class="help-block">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <p>
-                            <input type="password" class="form-control has-error" placeholder="Password"/>
-                        </p>
-
-                    </div>
-                </div>
-                <!--                <div class="row">
-                                    <div class="col-xs-12 alert alert-danger" role="alert">
-                                        <span>
-                                            Password incorrect
-                                        </span>
-                                    </div>
-                                </div>-->
-                <div class="row">
-                    <div class="col-xs-12">
-                        <a href="#" class="login-button" id="login-button">
-                            <span>Login</span>
-                        </a>
-                    </div>
-                </div>
-                <div class="row login-addons">
-                    <div class="col-xs-6">
-                        <p>
-                            <a href="#">
-                                <span>Forgot password</span>
-                            </a>
-                        </p>
-
-                    </div>
-                    <div class="col-xs-6">
-                        <a href="#">
-                            <p>
-                                <span>Create new account</span>
-                            </p>
-                        </a>
-                    </div>
-
-                </div>
-                <div class="row tos-area">
-                    <div class="col-xs-12">
-                        <p>
-                            By logging in, you agree to our <a href="/about/tos" target="_blank">Terms of Service</a> and <a href="/about/privacy-policy" target="_blank">Privacy Policy</a>.
-                        </p>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <hr class="hr-unstyled"/>
-        <div class="container-fluid">
-            <div class="login-container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h4>Enter your email to reset your password</h4>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <p>
-                            <input type="email" class="form-control" placeholder="Email"/>
-                        </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <a href="#" class="login-button" id="login-button">
-                            <span>Reset</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <hr class="hr-unstyled"/>
-        <footer>
-            <div class="container">
-                <div class="row links">
-                    <div class="col-sm-3">
-                        <ul class="list-unstyled">
-                            <li class="heading"><strong>About</strong></li>
-                            <li><a href="#">Our mission</a></li>
-                            <li><a href="#">Our plans</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-
-                        <ul class="list-unstyled">
-                            <li class="heading"><strong>Contact us</strong></li>
-                            <li><a href="#">Contacts</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-
-                        <ul class="list-unstyled">
-                            <li class="heading"><strong>Social</strong></li>
-                            <li><a href="#"><i class="fa fa-facebook"></i><span> Facebook</span></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i> Google+</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3">
-                        <ul class="list-unstyled">
-                            <li class="heading"><strong>Language</strong></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-globe"></span> Language</a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">English</a></li>
-                                    <li><a href="#">Русский</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <hr class="hr-unstyled"/>
-                <div class="row extra-links">
-                    <div class="col-sm-9">
-                        <div class="legal">
-                            <span class="legal-link"><a href="#">Terms of use</a></span>
-                            <span class="legal-link"><a href="#">Privacy notice</a></div></span>
-                    </div>
-                    <div class="col-sm-3">
-                        <p class="text-right">Copyright &copy; 2015 Stitch Galaxy</p>
-                        <p class="text-right">Except where noted, all rights reserved.</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-
-
+               </nav>
+               <div class="grid-cell">
+                 <h1>Test</h1>
+               </div>
+	</div>
+        
         <script src="assets/js/vendor.min.js"></script>
         <script src="assets/js/site.min.js"></script>
     </body>
