--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -14,25 +14,58 @@
         <div class="site__content">
             <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">site</span> component</h2>
-                <p class="component-description__bd">
+                <div class="component-description__bd">
                     <a class="component-description__link" href="/style/components/site.html" target="_blank">Example</a>
                     <br/>
                     <span>
                         Inspired by <a href="https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/" target="_blank">Solved by Flexbox</a>
                     </span>
-                </p>
-                <dl>
-                    <dt>Elements:</dt>
-                    <dd class="component-description__element-name">site__content</dd>
-                </dl>
+                    <dl class="component-description__elements">
+                        <dt>Elements:</dt>
+                        <dd class="component-description__element-name">site__content</dd>
+                    </dl>
+                </div>
+
                 <hr class="component-description__bottom-splitter"/>
             </div>
+            <div class="style-foundation">
+                <h1 class="style-foundation__header">Foundation</h1>
+                <h2 class="style-foundation__sub-header">Color palette</h2>
+                <div class="style-foundation__bd color-palette">
+                    <span>Stitch galaxy primary color palette contains:</span>
+                    <br/>
+                    <span>$color-pistachio</span>
+                    <div class="color-palette__line color-palette__line_color_pistachio"></div>
+                    <div class="color-palette__line_color_pistachio"><div class="color-palette__square_color_blue"></div></div>
+                    <div class="color-palette__line_color_pistachio"><div class="color-palette__text_color_blue">$color-blue</div></div>
+
+                    <!--                    <span>$color-blue</span>
+                                        <span>$color-wall</span>
+                    
+                                        while supplementary color palette contains:
+                                        <span>$color-brown</span>
+                                        <span>$color-grey</span>
+                                        <span>$color-green</span>
+                                        <span>$color-violet</span>
+                    
+                                        you also free to use:
+                                        <span>$color-black</span>
+                                        <span>$color-white</span>-->
+                    <table>
+                        <tr>
+                            <td>
+                                <div></div>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <hr class="style-foundation__bottom-splitter"/>
+            </div>
+
+
+
         </div>
         <script src="/assets/js/vendor.min.js"></script>
         <script src="/assets/js/site.min.js"></script>
     </body>
 </html>
-
-
-
-<!---->
