--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -30,8 +30,8 @@
             </div>
             <div class="style-foundation">
                 <h1 class="style-foundation__header">Foundation</h1>
-                <h2 class="style-foundation__sub-header">Color palette</h2>
-                <div class="style foundation_bd">
+                <div class="style-foundation__bd">
+                    <h2 class="style-foundation__sub-header">Color palette</h2>
                     <a href="/style/colors.html" target="_blank">View</a>
                 </div>
                 <hr class="style-foundation__bottom-splitter"/>
