--- a/static/style/style/colors.html
+++ b/static/style/style/colors.html
@@ -13,29 +13,29 @@
     <body class="site">
         <div class="site__content">
             <div class="color-palette">
-                <h2>Color palette</h2>
-                <h3>Primary color palette</h3>
+                <h1 class="color-palette__header">Color palette</h1>
+                <h2 class="color-palette__sub-header">Primary color palette</h2>
                 <div class="color-palette__line color-palette__line_color_pistachio"><span>$color-pistachio</span></div>
                 <div class="color-palette__line color-palette__line_color_turquoise"><span>$color-turquoise</span></div>
                 <div class="color-palette__line color-palette__line_color_wall"><span>$color-wall</span></div>
-                <p>They can be used as background, blocks, etc</p>
-                <h3>Informational color palette</h3>
+                <p class="color-palette__bd">They can be used as background, blocks, etc</p>
+                <h2 class="color-palette__sub-header">Informational color palette</h2>
                 <div class="color-palette__line color-palette__line_color_red"><span>$color-red</span></div>
                 <div class="color-palette__line color-palette__line_color_green"><span>$color-green</span></div>
                 <div class="color-palette__line color-palette__line_color_blue"><span>$color-blue</span></div>
                 <div class="color-palette__line color-palette__line_color_yellow"><span>$color-yellow</span></div>
-                <p>They can be used for notifications, action buttons, etc</p>
-                <h3>Supplementary color palette</h3>
+                <p class="color-palette__bd">They can be used for notifications, action buttons, etc</p>
+                <h2 class="color-palette__sub-header">Supplementary color palette</h2>
                 <div class="color-palette__line color-palette__line_color_brown"><span>$color-brown</span></div>
                 <div class="color-palette__line color-palette__line_color_grey"><span>$color-grey</span></div>
                 <div class="color-palette__line color-palette__line_color_orange"><span>$color-orange</span></div>
-                <p>They can be used for styling, as a funny color combinations, etc</p>
-                <h3>Plain color palette</h3>
+                <p class="color-palette__bd">They can be used for styling, as a funny color combinations, etc</p>
+                <h2 class="color-palette__sub-header">Plain color palette</h2>
                 <div class="color-palette__line color-palette__line_color_black"><span style="color: white">$color-black</span></div>
                 <div class="color-palette__line color-palette__line_color_white"><span>$color-white</span></div>
-                <p>You can also use plain colors - fonts, etc</p>
-                <h2>Combinations</h2>
-                <h3>Primary color palette as bg</h3>
+                <p class="color-palette__bd">You can also use plain colors - fonts, etc</p>
+                <h1 class="color-palette__header">Combinations</h1>
+                <h2 class="color-palette__sub-header">Primary color palette as bg</h2>
                 <div class="color-palette__line color-palette__line_width_double color-palette__line_color_pistachio">
                     <div class="color-palette__square color-palette__square_color_pistachio"></div>
                     <div class="color-palette__square color-palette__square_color_turquoise"></div>
@@ -78,7 +78,7 @@
                     <div class="color-palette__square color-palette__square_color_black"></div>
                     <div class="color-palette__square color-palette__square_color_white"></div>
                 </div> 
-                <h3>Informational color palette as bg</h3>
+                <h2 class="color-palette__sub-header">Informational color palette as bg</h2>
                 <div class="color-palette__line color-palette__line_width_double color-palette__line_color_red">
                     <div class="color-palette__square color-palette__square_color_pistachio"></div>
                     <div class="color-palette__square color-palette__square_color_turquoise"></div>
@@ -135,7 +135,7 @@
                     <div class="color-palette__square color-palette__square_color_black"></div>
                     <div class="color-palette__square color-palette__square_color_white"></div>
                 </div> 
-                <h3>Supplementary color palette as bg</h3>
+                <h2 class="color-palette__sub-header">Supplementary color palette as bg</h2>
                 <div class="color-palette__line color-palette__line_width_double color-palette__line_color_brown">
                     <div class="color-palette__square color-palette__square_color_pistachio"></div>
                     <div class="color-palette__square color-palette__square_color_turquoise"></div>
@@ -178,7 +178,7 @@
                     <div class="color-palette__square color-palette__square_color_black"></div>
                     <div class="color-palette__square color-palette__square_color_white"></div>
                 </div> 
-                <h3>Plain colors as bg</h3>
+                <h2 class="color-palette__sub-header">Plain colors as bg</h2>
                 <div class="color-palette__line color-palette__line_width_double color-palette__line_color_black">
                     <div class="color-palette__square color-palette__square_color_pistachio"></div>
                     <div class="color-palette__square color-palette__square_color_turquoise"></div>
@@ -207,8 +207,8 @@
                     <div class="color-palette__square color-palette__square_color_black"></div>
                     <div class="color-palette__square color-palette__square_color_white"></div>
                 </div>
-                <h2>Text color and background combinations</h2>
-                <h3>Primary color palette as bg</h3>
+                <h1 class="color-palette__header">Text color and background combinations</h1>
+                <h2 class="color-palette__sub-header">Primary color palette as bg</h2>
                 <div class="color-palette__line color-palette__line_color_pistachio">
                     <span class="color-palette__text color-palette__text_color_pistachio">
                         $color-pistachio
@@ -323,7 +323,7 @@
                         $color-white
                     </span> 
                 </div>
-                <h3>Informational color palette as bg</h3>
+                <h2 class="color-palette__sub-header">Informational color palette as bg</h2>
                 <div class="color-palette__line color-palette__line_color_red">
                     <span class="color-palette__text color-palette__text_color_pistachio">
                         $color-pistachio
@@ -476,7 +476,7 @@
                         $color-white
                     </span> 
                 </div>
-                <h3>Supplementary color palette as bg</h3>
+                <h2 class="color-palette__sub-header">Supplementary color palette as bg</h2>
                 <div class="color-palette__line color-palette__line_color_brown">
                     <span class="color-palette__text color-palette__text_color_pistachio">
                         $color-pistachio
@@ -591,7 +591,7 @@
                         $color-white
                     </span> 
                 </div>
-                <h3>Plain colors as bg</h3>
+                <h2 class="color-palette__sub-header">Plain colors as bg</h2>
                 <div class="color-palette__line color-palette__line_color_black">
                     <span class="color-palette__text color-palette__text_color_pistachio">
                         $color-pistachio
