--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -35,6 +35,10 @@
                     <a href="/style/colors.html" target="_blank">View</a>
                 </div>
                 <hr class="style-foundation__bottom-splitter"/>
+                <div class="style-foundation__bd">
+                    <h2 class="style-foundation__sub-header">Typography</h2>
+                </div>
+                <hr class="style-foundation__bottom-splitter"/>
             </div>
         </div>
         <script src="/assets/js/vendor.min.js"></script>
