--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -37,6 +37,14 @@
                 <hr class="style-foundation__bottom-splitter"/>
                 <div class="style-foundation__bd">
                     <h2 class="style-foundation__sub-header">Typography</h2>
+                    <div class="typography">
+                        <h1 class="typography__t typography__t_3">XX Large</h1>
+                        <h2 class="typography__t typography__t_2">X Large</h2>
+                        <h3 class="typography__t typography__t_1">Large</h3>
+                        <p class="typography__t typography__t_0">Regular</p>
+                        <p class="typography__t typography__t_-1"><b>Small</b></p>
+                        <p class="typography__t typography__t_-2"><b>X Small</b></p>
+                    </div>
                 </div>
                 <hr class="style-foundation__bottom-splitter"/>
             </div>
