--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -37,22 +37,7 @@
                         <li class="language-menu__item">English</li>
                         <li class="language-menu__item language-menu__item_selected">Русский</li>
                         <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Языкоченьдлинный</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
-                        <li class="language-menu__item">Русский</li>
+<!--                        <li class="language-menu__item">Языкоченьдлинный</li>-->
                         <li class="language-menu__item">Русский</li>
                         <li class="language-menu__item">Русский</li>
                         <li class="language-menu__item">Русский</li>
