--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="overflow: hidden">
+<html ng-app="stitchGalaxy" ng-class="{'disable-scroll': popupVisible}">
     <head>
         <meta charset="utf-8">
         <title>Stitch galaxy styles</title>
@@ -31,9 +31,10 @@
             <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">language-menu</span> component</h2>
                 <div class="component-description__bd">
-                    <a class="component-description__link" href="#">Select language</a>
-                    <div class="language-menu">
-                        <div class="language-menu__close-button"><i class="fa fa-times"></i></div>
+                    <input type="checkbox" ng-model="popupVisible">
+                    <a class="component-description__link" href="#" ng-click="popupVisible = !popupVisible">Select language</a>
+                    <div class="language-menu" ng-class="{'language-menu_visible': popupVisible}">
+                        <div class="language-menu__close-button" ng-click="popupVisible = !popupVisible"><i class="fa fa-times"></i></div>
                         <ul class="language-menu__list">
                             <li class="language-menu__item"><span class="language-menu__item-text language-menu__item-text_selected">English - English</span></li>
                             <li class="language-menu__item"><span class="language-menu__item-text">Russian - Русский</span></li>
