--- a/static/style/style/colors.html
+++ b/static/style/style/colors.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="stitchGalaxy">
     <head>
         <meta charset="utf-8">
         <title>Stitch galaxy styles</title>
