--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -34,7 +34,7 @@
                     <input type="checkbox" ng-model="popupVisible">
                     <a class="component-description__link" href="#" ng-click="popupVisible = !popupVisible">Select language</a>
                     <div class="language-menu" ng-class="{'language-menu_visible': popupVisible}">
-                        <div class="language-menu__close-button" ng-click="popupVisible = !popupVisible"><i class="fa fa-times"></i></div>
+                        <div class="language-menu__close-button" ng-click="popupVisible = !popupVisible"><i class="language-menu__close-button-icon"></i></div>
                         <ul class="language-menu__list">
                             <li class="language-menu__item"><span class="language-menu__item-text language-menu__item-text_selected">English - English</span></li>
                             <li class="language-menu__item"><span class="language-menu__item-text">Russian - Русский</span></li>
