--- a/static/style/style/styles.html
+++ b/static/style/style/styles.html
@@ -12,6 +12,7 @@
     </head>
     <body class="site">
         <div class="site__content">
+
             <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">site</span> component</h2>
                 <div class="component-description__bd">
@@ -57,15 +58,31 @@
                 <hr class="component-description__bottom-splitter"/>
             </div>
             
-            <div class="component-description">
+                        <div class="component-description">
                 <h2 class="component-description__header"><span class="component-description__block-name">nav-menu-small</span> component</h2>
                 <div class="component-description__bd">
                     <div class="nav-menu-small">
-                        <div class="nav-menu-small__toggle-area"><i class="nav-menu-small__toggle-area-icon"></i></div>
-                        <ul class="nav-menu-small__list nav-menu-small__list_visible">
+                        
+                        <div class="nav-menu-small__toggle-area">
+                            <div class="nav-menu-small__toggle-area-left-container">
+                                <i class="nav-menu-small__toggle-area-left-container-icon"></i>
+                            </div>
+                            <div class="nav-menu-small__toggle-area-center-container">
+                                <i class="nav-menu-small__toggle-area-center-container-icon" ng-click="popupVisible = !popupVisible"></i>
+                            </div>
+                            <div ng-click="smallMenuVisible=!smallMenuVisible" class="nav-menu-small__toggle-area-right-container">
+                                <i class="nav-menu-small__toggle-area-right-container-icon"></i>
+                            </div>
+                            <div class="nav-menu-small__toggle-area-clear"></div>
+                        </div>
+                        <ul class="nav-menu-small__list" ng-class="{'nav-menu-small__list_visible': smallMenuVisible}">
                             <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_gallery"></i><span class="nav-menu-small__item-text nav-menu-small__item-text_selected">Gallery</span></li>
                             <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_how-it-works"></i><span class="nav-menu-small__item-text">How it works</span></li>
+                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_workspace"></i><span class="nav-menu-small__item-text">Workspace</span></li>
                             <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_globe"></i><span class="nav-menu-small__item-text">Language</span></li>
+                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_settings"></i><span class="nav-menu-small__item-text">Settings</span></li>
+                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_signout"></i><span class="nav-menu-small__item-text">Log out</span></li>
+                            <li class="nav-menu-small__item"><i class="nav-menu-small__item-icon nav-menu-small__item-icon_signin"></i><span class="nav-menu-small__item-text">Log in</span></li>
                         </ul>
                     </div>
 
